es-ES injection on 20210117-182135

--- a/webapp/portlet/src/main/resources/locale/portlet/social/SpacesListApplication_es_ES.properties
+++ b/webapp/portlet/src/main/resources/locale/portlet/social/SpacesListApplication_es_ES.properties
@@ -74,6 +74,6 @@ spacesList.label.profile.External=Externo
 spacesList.label.profile.RemoveConnection=Eliminar conexi\u00F3n
 spacesList.label.profile.StatusTitle=Cargando...
 search.connector.label.space=Espacios
-spaceList.label.openSpaceInfo=Open Space Information
-spaceList.label.openSpaceMenu=Open Space Menu
-spaceList.label.openSpaceActionMenu=Open Space Action Menu
+spaceList.label.openSpaceInfo=Abrir informaci\u00F3n del espacio
+spaceList.label.openSpaceMenu=Abrir men\u00FA del espacio
+spaceList.label.openSpaceActionMenu=Abrir men\u00FA de acci\u00F3n del espacio
